# Universal_Memecoin_Trading_Token_Launchpad_Bot

./: .gitignore  README.md  bundlelogic.rs
back/: Cargo.toml  index.ts  nodemon.json  package-lock.json  package.json  vanity.json
back/config/: jito.json
back/controllers/: metadata_controller.ts  snipebundle_controller.ts  vanity_controller.ts  wallet_controller.ts
back/middleware/: admin.ts  auth.ts  database.ts  generate-key.ts  token.ts  user.ts
back/scripts/: update-admin.js
back/utils/bundler/pump/dex/: pump.rs  pumpswap.rs
back/utils/bundler/pump/modules/: snipeBundle.rs
back/utils/services/: metadata_service.ts  vanity_cache_service.ts  wallet_service.rs
bots/BonkFun-Volume-Bot/: package.json
bots/BonkFun-Volume-Bot/clients/: LookupTableProvider.ts
bots/Bonkfun-Bundler/: package.json
bots/Bonkfun-Bundler/utils/: swapOnlyAmm.ts
bots/Copy-Trading-Bot/: package.json
bots/Meteora-Volume-Bot/: package.json
bots/Meteora-Volume-Bot/utils/: swapOnlyAmm.ts
bots/Pumpfun-Volume-Bot/: package.json
bots/Raydium-Sniper-Bot/: package.json
bots/Raydium-Sniper-Bot/utils/: utils.ts
bots/Raydium-Volume-Bot/: package.json
bots/Raydium-Volume-Bot/utils/: swapOnlyAmm.ts
bots/pumpfun-sniper-bot/: package.json
front/: package-lock.json  package.json
front/public/: index.html
front/src/: App.jsx  index.js  routes.jsx  theme.js
front/src/components/: LoadingDialog.jsx  LoginScreen.jsx  LogoutDialog.jsx  Sidebar.jsx  StandardDialog.jsx  TokenContext.jsx  TokenDropdown.jsx  TokenImage.jsx
front/src/pages/: Account.jsx  Admin.jsx  CTMode.jsx  (+10 more)
(+4 files in other folders)
