[package]
name = "wallet-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wallet_service"
path = "utils/services/wallet_service.rs"

[[bin]]
name = "snipebundle_service"
path = "utils/bundler/pump/modules/snipeBundle.rs"

[dependencies]
solana-sdk = "1.17"
solana-client = "1.17"
solana-program = "1.17"
spl-token = "4.0"
spl-associated-token-account = "2.3"
bs58 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"
bincode = "1.3"
solana-address-lookup-table-program = "1.17" 